--- a/_config.yml
+++ b/_config.yml
@@ -4,38 +4,38 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Mediator"
+title: "Worn Out Bible"
 description: > # this means to ignore newlines until "email:"
-   A Jekyll theme - Medium inspired
+   Andrew Stacy's Bible Study Blog
 
-email: a-mail@mail.mail
+email: ajstacy@gmail.com
 #blog logo
-logo: "/assets/images/df_logo.jpg"
+logo: "/assets/images/logo.png"
 float_logo: true # true, false (default)
 
 # blog cover
-cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+cover: "/assets/images/cover.jpg"
 
-name: 'Dirk Fabisch'
-author: 'Dirk Fabisch'
+name: 'Andrew Stacy'
+author: 'Andrew Stacy'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://myblog.***.***" # the base hostname & protocol for your site
+url: "http://wornoutbible.com" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
-twitter_handle: '@dirkfabisch'
+twitter_handle: '@ajstacy06'
 
 #fill in disqus shortname to use disqus
-#disqus: disqus-shortname
+disqus: wornoutbible
 
 #google_analytics: UA-XXXXX-X
 
 # social icons and sharing options
 social:
   - icon:	twitter
-    url:	https://twitter.com/dirkfabisch
+    url:	https://twitter.com/ajstacy06
     desc: Follow me on twitter
     share_url: http://twitter.com/share
     share_title: ?text=
@@ -49,8 +49,8 @@ social:
 #    share_link: "&amp;u="
 
   - icon:	github
-    url:	https://github.com/dirkfabisch
-    desc:	Fork me on github
+    url:	https://github.com/AJStacy
+    desc:	Find my code at github
     share_url:
     share_title:
     share_link:
