Added a script to start the jekyll server for local dev.

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "git@github.com:AJStacy/wornoutbible.git",
   "author": "Andrew Stacy <astacy@stratacache.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "start": "bundle exec jekyll serve"
+  }
 }
